# mdv

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  lefthook.yml  llm.txt  mdv  package-lock.json  package.json  release-please-config.json  rust-toolchain.toml
.agents/memory/: lessons.md  todo.md
.changeset/: README.md  config.json
.claude/: settings.local.json
.github/workflows/: changeset-release.yml  ci.yml  main-channel.yml  package-artifacts.yml  release-assets.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MARKDOWN.md  PRD.md  STRUCTURE.md  TECH.md
docs/plan/: init.md
docs/superpowers/plans/: 2026-03-30-linux-render-html-to-png.md
docs/superpowers/specs/: 2026-03-30-linux-render-html-to-png-design.md
examples/: pixel.ppm  rich_markdown.md
scripts/: install.sh  package-release.sh  sync-cargo-version.mjs  verify-release-archive.sh  verify-release-metadata.sh  verify-versions.mjs
src/: lib.rs  main.rs
src/app/: mod.rs
src/cli/: args.rs  mod.rs
src/core/: config.rs  diff.rs  document.rs  layout.rs  mod.rs  theme.rs
src/io/: browser.rs  fs.rs  image_decoder.rs  kitty_graphics.rs  mermaid_cli.rs  mod.rs  self_update.rs
src/io/webkit_snapshot/: diagnostics.rs  mod.rs  paths.rs  script.rs  tests.rs
src/render/: markdown.rs  markdown_pipeline.rs  mod.rs  svg.rs  text.rs
src/render/github_html/: mermaid.rs  mod.rs  postprocess.rs  styles.rs  tests.rs
src/support/: tracing.rs
src/ui/: mod.rs  page_graphics.rs  terminal.rs
src/ui/terminal/: graphics.rs  highlight.rs  layout.rs  mod.rs  tests.rs
tests/e2e/: headless_render.rs  mod.rs  rich_assets.rs  startup.rs
tests/fixtures/gfm/badges-local/: expected-substrings.txt  input.md
tests/fixtures/gfm/badges-remote/: expected-substrings.txt  input.md
tests/fixtures/gfm/code-fence/: expected-substrings.txt
tests/fixtures/gfm/footnotes/: expected-substrings.txt  input.md
tests/fixtures/gfm/headings/: expected-substrings.txt
tests/fixtures/gfm/html-centered-blocks/: expected-substrings.txt  input.md
tests/fixtures/gfm/html-details/: expected-substrings.txt  input.md
tests/fixtures/gfm/html-img/: expected-substrings.txt  input.md
tests/fixtures/gfm/html-picture/: expected-substrings.txt  input.md
tests/fixtures/gfm/html-wrappers/: expected-substrings.txt  input.md
tests/fixtures/gfm/image/: expected-substrings.txt  input.md
tests/fixtures/gfm/lists/: expected-substrings.txt  input.md
tests/fixtures/gfm/math/: expected-substrings.txt  input.md
tests/fixtures/gfm/paragraph-inline/: expected-substrings.txt  input.md
tests/fixtures/gfm/quote-alerts/: expected-substrings.txt  input.md
tests/fixtures/gfm/table/: expected-substrings.txt  input.md
tests/fixtures/gfm/task-lists/: expected-substrings.txt
tests/fixtures/gfm/thematic-break/: expected-substrings.txt
tests/integration/: distribution_contract.rs  help_output.rs  mod.rs  render_features.rs
tests/unit/: browser.rs  cli_args.rs  diff.rs  image_decoder.rs  kitty_graphics.rs  layout.rs  markdown_normalize.rs  mermaid_cli.rs  mod.rs  page_graphics.rs  plain_text_render.rs  self_update.rs  svg_render.rs  terminal_render.rs  terminal_support.rs
tests/unit/render_pipeline/: gfm_fixtures.rs  github_html.rs  mod.rs  webkit_snapshot.rs
