[package]
name = "mdv"
version = "0.1.0"
edition = "2024"
description = "A high-fidelity Markdown viewer for Ghostty and Kitty"
license = "MIT"

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
comrak = "0.39.1"
crossterm = "0.29.0"
image = { version = "0.25.6", default-features = true, features = ["png", "jpeg", "gif", "webp"] }
resvg = "0.45.1"
syntect = { version = "5.2.0", default-features = true, features = ["default-fancy"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
