[package]
name = "mdv"
version = "0.1.1"
edition = "2024"
rust-version = "1.92"
description = "Browser-quality Markdown viewer for the terminal"
license = "MIT"
repository = "https://github.com/posaune0423/mdv"
readme = "README.md"
keywords = ["markdown", "terminal", "viewer", "cli", "kitty"]
categories = ["command-line-utilities", "text-processing"]

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
comrak = "0.51.0"
crossterm = "0.29.0"
dark-light = "1.1.1"
image = { version = "0.25.10", default-features = true, features = ["png", "jpeg", "gif", "webp"] }
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syntect = { version = "5.3.0", default-features = true, features = ["default-fancy"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
ureq = "2.12.1"

[target.'cfg(target_os = "linux")'.dependencies]
headless_chrome = "1.0"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
serde_yaml = "0.9.34"
